BPER/DEVF/force-app/main/default/objects/Appuntamento_Consulenza_Finanziaria__c/Appuntamento_Consulenza_Finanziaria__c.object-meta.xml
<CustomObject>
    <label>Appuntamento Consulenza Finanziaria</label>
    <nameField>
        <displayFormat>ACFE-{000000}</displayFormat>
        <label>Appuntamento Consulenza Finanziaria</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appuntamenti Consulenza Finanziaria</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>