BPER/DEVF/force-app/main/default/objects/Appuntamento_Consulenza_Finanziaria__c/fields/BankIT_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>BankIT_CreatedDate__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data creazione</label>
    <type>DateTime</type>
</CustomField>