BPER/DEVF/force-app/main/default/objects/Appuntamento_Consulenza_Finanziaria__c/fields/BankIT_Creato_Da__c.field-meta.xml
<CustomField>
    <fullName>BankIT_Creato_Da__c</fullName>
    <formula>CreatedBy.FirstName &amp; &apos; &apos; &amp; CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creato da</label>
    <type>Text</type>
</CustomField>