BPER/DEVF/force-app/main/default/objects/Appuntamento_Consulenza_Finanziaria__c/fields/BankIT_LastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>BankIT_LastModifiedBy__c</fullName>
    <formula>LastModifiedBy.FirstName &amp; &apos; &apos; &amp; LastModifiedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ultima modifica di</label>
    <type>Text</type>
</CustomField>