BPER/DEVF/force-app/main/default/objects/Appuntamento_Consulenza_Finanziaria__c/fields/BankIT_LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>BankIT_LastModifiedDate__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data ultima modifica</label>
    <type>DateTime</type>
</CustomField>