BPER/DEVF/force-app/main/default/objects/Appuntamento_Consulenza_Finanziaria__c/fields/BankIT_Nome_Cliente__c.field-meta.xml
<CustomField>
    <fullName>BankIT_Nome_Cliente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome Cliente</label>
    <length>250</length>
    <type>Text</type>
</CustomField>