BPER/DEVF/force-app/main/default/objects/Appuntamento_Consulenza_Finanziaria__c/fields/BankIT_Nome_Titolare_CE__c.field-meta.xml
<CustomField>
    <fullName>BankIT_Nome_Titolare_CE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome Titolare CE</label>
    <length>250</length>
    <type>Text</type>
</CustomField>