BPER/DEVF/force-app/main/default/objects/Appuntamento_Consulenza_Finanziaria__c/fields/CRM_ABI__c.field-meta.xml
<CustomField>
    <fullName>CRM_ABI__c</fullName>
    <formula>CRM_Nome_Cliente__r.FinServ__BankNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABI</label>
    <type>Text</type>
</CustomField>