BPER/DEVF/force-app/main/default/objects/Appuntamento_Consulenza_Finanziaria__c/fields/CRM_Materie_Trattate__c.field-meta.xml
<CustomField>
    <fullName>CRM_Materie_Trattate__c</fullName>
    <label>Materie Trattate</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>View di mercato</fullName>
            </value>
            <value>
                <fullName>Commento sul portafoglio investito</fullName>
            </value>
            <value>
                <fullName>Condivisione Proposta di Investimento già predisposta</fullName>
            </value>
            <value>
                <fullName>Richiesta da parte del Cliente di ricevere una Proposta di Investimento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>