BPER/DEVF/force-app/main/default/objects/Appuntamento_Consulenza_Finanziaria__c/fields/CRM_NDG_Titolare_CE__c.field-meta.xml
<CustomField>
    <fullName>CRM_NDG_Titolare_CE__c</fullName>
    <formula>CRM_Nome_Titolare_CE__r.CRM_NDG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NDG Titolare CE</label>
    <type>Text</type>
</CustomField>