BPER/DEVF/force-app/main/default/objects/Appuntamento_Consulenza_Finanziaria__c/fields/CRM_Nome_Cliente__c.field-meta.xml
<CustomField>
    <fullName>CRM_Nome_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Appuntamenti_Consulenza_Finanziaria</relationshipName>
    <type>Lookup</type>
</CustomField>