BPER/DEVF/force-app/main/default/objects/Appuntamento_Consulenza_Finanziaria__c/fields/CRM_Nome_Titolare_CE__c.field-meta.xml
<CustomField>
    <fullName>CRM_Nome_Titolare_CE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome Titolare CE</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Appuntamenti_Consulenza_Finanziaria1</relationshipName>
    <type>Lookup</type>
</CustomField>