BPER/DEVF/force-app/main/default/objects/Appuntamento_Consulenza_Finanziaria__c/fields/CRM_Permesso_Update_Delete_Appuntamento__c.field-meta.xml
<CustomField>
    <fullName>CRM_Permesso_Update_Delete_Appuntamento__c</fullName>
    <formula>IF($User.Id = Owner:User.Id, IF(TODAY() &gt;= DATEVALUE(CreatedDate) &amp;&amp; TODAY() &lt;= ADDMONTHS(DATEVALUE(CreatedDate),3), TRUE, FALSE), FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Permesso Update/Delete Appuntamento</label>
    <type>Checkbox</type>
</CustomField>