BPER/DEVF/force-app/main/default/objects/Appuntamento_Consulenza_Finanziaria__c/fields/Data_incontro__c.field-meta.xml
<CustomField>
    <fullName>Data_incontro__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data incontro</label>
    <required>true</required>
    <type>Date</type>
</CustomField>