BPER/DEVF/force-app/main/default/objects/Appuntamento_Consulenza_Finanziaria__c/fields/NDG_Cliente__c.field-meta.xml
<CustomField>
    <fullName>NDG_Cliente__c</fullName>
    <formula>CRM_Nome_Cliente__r.CRM_NDG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NDG Cliente</label>
    <type>Text</type>
</CustomField>