BPER/DEVF/force-app/main/default/objects/Appuntamento_Consulenza_Finanziaria__c/fields/Referente_Optima__c.field-meta.xml
<CustomField>
    <fullName>Referente_Optima__c</fullName>
    <label>Referente Optima</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>19049 Daniela Vitti</fullName>
            </value>
            <value>
                <fullName>15387 Rocco Dabraio</fullName>
            </value>
            <value>
                <fullName>19044 Alberto Moioli</fullName>
            </value>
            <value>
                <fullName>19046 Laura Rampoldi</fullName>
            </value>
            <value>
                <fullName>03750 Alessandro Ranalli</fullName>
            </value>
            <value>
                <fullName>19048 Francesca Sampogna</fullName>
            </value>
            <value>
                <fullName>19051 Massimo Marcotti</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>