BPER/DEVF/force-app/main/default/objects/Appuntamento_Consulenza_Finanziaria__c/validationRules/Check_Owner_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Owner_Edit</fullName>
    <active>true</active>
    <description>Controlla se chi effettua modifiche sull&apos;appuntamento è proprietario di quel record</description>
    <errorConditionFormula>IF(Id != null, Owner:User.Id != $User.Id, false)</errorConditionFormula>
    <errorMessage>Non puoi modificare un appuntamento creato da un altro utente.</errorMessage>
</ValidationRule>