BPER/DEVF/force-app/main/default/objects/Appuntamento_Consulenza_Finanziaria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>BankIT_CreatedDate__c</columns>
    <columns>NAME</columns>
    <columns>NDG_Cliente__c</columns>
    <columns>CRM_Nome_Cliente__c</columns>
    <columns>BankIT_Nome_Cliente__c</columns>
    <columns>CRM_NDG_Titolare_CE__c</columns>
    <columns>CRM_Nome_Titolare_CE__c</columns>
    <columns>BankIT_Nome_Titolare_CE__c</columns>
    <columns>CRM_ABI__c</columns>
    <columns>Referente_Optima__c</columns>
    <columns>CRM_Materie_Trattate__c</columns>
    <columns>Data_incontro__c</columns>
    <columns>BankIT_Creato_Da__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>